--- a/components/go-huvoqgmz/overlays/development/deployment-patch.yaml
+++ b/components/go-huvoqgmz/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-huvoqgmz
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-huvoqgmz:e1953d78d89645f94b01ca4bb1f7b16de82dd08d@sha256:9850656dcee6512b31b7dedd22a9bb658a8f66036fc6f6053060ebbe85f139c2
+          name: container-image
